<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/titleText"
        android:textSize="25sp"
        style="@style/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


<!--    tambah kasih outline di style kotaknya di hapus-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textField"
        android:layout_margin="20dp"
        app:startIconContentDescription="@string/textField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editText"/>

    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField"
        app:layout_constraintBottom_toTopOf="@+id/switchBahasa">
        <RadioButton
            android:id="@+id/radioButton_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_1"/>
        <RadioButton
            android:id="@+id/radioButton_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_2"/>
        <RadioButton
            android:id="@+id/radioButton_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_3"/>
    </RadioGroup>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchBahasa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchBahasa"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:switchPadding="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchBahasa" />

    <TextView
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="253dp"
        android:layout_height="200dp"
        android:src="@drawable/tip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate"
        tools:ignore="ContentDescription" />





</androidx.constraintlayout.widget.ConstraintLayout>